# Generative-Processing-In-Rust

./: .gitignore  GETTING_STARTED.md  LICENSE  LICENSE-APACHE  README.md  RELEASE_MANIFEST.md  vgpu.h
Development/: ADVANCED_PRUNING.md  ARBITRARY_UNIFORMITY.md  ARM_JIT_SCAFFOLD.md
docs/: INTEGRITY_PROOF.md
examples/: README.md  anomaly_test.py  ffi_demo.py  holographic_demo.py  main.py  self_host_demo.py  trinity_matrix_solver.py  vphy_demo.py  vrender_demo.py
include/: vgpu.hpp  vgpu_ffi.h
python/: vgpu.py  vgpu_cuda_bridge.py  vgpu_matrix.py
vgpu_rust/: Cargo.toml  README.md  Virtual Generative Processing unit.txt  state.vman  vgpu_demo.py  vgpu_ffi.h
vgpu_rust/src/: ffi.rs  gemm.rs  hilbert.rs  lib.rs  main.rs  native_jit.rs  sort.rs  stdlib.rs  trinity.rs  veigen.rs  vgeometric.rs  vhdc.rs  vio.rs  vmatrix.rs  vmatrix_fp.rs  vphy.rs  vrender.rs  vrns.rs
vgpu_rust/tests/: adversarial.rs  avx_ops.rs  bench_scaling_violation.rs  benchmarks.rs  concurrency.rs  connections.rs  cross_lang_identity_test.rs  distributed_mesh.rs  edge_cases.rs  ffi_sanity.rs  jit_vectorization.rs  key_functions.rs  matmul_induction.rs  memory_cap.rs  native_jit_test.rs  performance.rs  rns_repro_stress.rs  shader_bridge.rs  shunt_heuristic.rs  structural_immunity.rs  test_auto_induction.rs  test_compression_proof.rs  test_divergence_telemetry.rs  test_dynamic_stability.rs  test_geometric_integrity.rs  test_substrate_integrity.rs  test_universal_io_grounding.rs  universal_io.rs  use_cases.rs  v2_integration.rs  v_amplification.rs  vcpu_logic.rs
(+47 files in other folders)
