[package]
name = "vgpu_rust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Inductive Computational Substrate for O(1) Manifold Recall"
repository = "https://github.com/Kier73/vGPU"
readme = "../README.md"
authors = ["Kieran Vanderburgh <Kier73research@gmail.com>"]
keywords = ["gpu", "induction", "manifold", "rns", "mathematics"]
categories = ["emulators", "mathematics", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vgpu_bench"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
image = "0.25.9"
ndarray = "0.17.2"
npy = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
